[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biotuner"
version = "0.1.0"
description = "Time series harmonic analysis for adaptive tuning systems and microtonal exploration"
authors = [
    { name = "Antoine Bellemare", email = "antoine.bellemare9@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["biosignal", "harmony", "tuning", "eeg", "microtonality", "music", "time series"]
requires-python = ">=3.6"
dependencies = [
    "matplotlib>=3.5.3",
    "seaborn>=0.12.1",
    "mne>=1.4.0",
    "fooof>=1.0.0",
    "emd>=0.5.5",
    "contfrac>=1.0.0",
    "scipy>=1.7.3",
    "numpy>=1.21.4,<2.0",
    "mido>=1.2.10",
    "sympy>=1.12",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
interactive = [
    "ipywidgets>=8.0.4",
    "pygame>=2.1.2",
    "pyACA>=0.3.1",
    "pactools>=0.3.1",
    "colorednoise>=2.1.0",
    "neurokit2>=0.2.2",
    "pingouin",
    "plotly>=5.13.1",
    "PyWavelets>=1.4.1",
    "neurodsp>=2.2",
    "IPython>=7.0.0",
    "scikit-learn",
]
gui = [
    "streamlit>=1.15.0",
    "streamlit-echarts>=0.4.0",
    "librosa>=0.9.2",
    "sounddevice>=0.4.5",
    "music21>=6.7.0", 
    "plotly>=5.0.0",
    "pytuning"
]

[project.urls]
"Homepage" = "https://github.com/antoinebellemare/biotuner"

[tool.setuptools]
packages = ["biotuner"]

[tool.black]
line-length = 128
